--- a/docker-compose-with-mysql.yaml
+++ b/docker-compose-with-mysql.yaml
@@ -52,7 +52,7 @@ services:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
-      mysqlserver:
+      mysql-server:
         condition: service_healthy
     ports:
       - 8081:8081
@@ -73,7 +73,7 @@ services:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
-      mysqlserver:
+      mysql-server:
         condition: service_healthy
     ports:
       - 8082:8082
@@ -94,7 +94,7 @@ services:
         condition: service_healthy
       discovery-server:
         condition: service_healthy
-      mysqlserver:
+      mysql-server:
         condition: service_healthy
     ports:
       - 8083:8083
@@ -196,9 +196,9 @@ services:
 
 # mysql database
 
-  mysqlserver:
+  mysql-server:
     image: mysql:8.4.5
-    container_name: mysqlserver
+    container_name: mysql-server
     environment:
       MYSQL_ROOT_PASSWORD: petclinic
       MYSQL_DATABASE: petclinic
